[package]
name = "confidential-transfer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "wrapper_example"
path = "src/bin/wrapper_example.rs"

[dependencies]
# Core Solana dependencies
solana-client = "2.1.0"
solana-sdk = "2.1.0"
solana-zk-sdk = "2.1.0"
solana-program = "2.1.0"

# SPL Token dependencies
spl-associated-token-account = "6.0.0"
spl-token = "6.0.0"
spl-token-2022 = "6.0.0"
spl-token-client = "0.14.0"

# Confidential transfer specific dependencies
spl-token-confidential-transfer-proof-extraction = "0.2.1"
spl-token-confidential-transfer-proof-generation = "0.3.0"

# Utility dependencies
anyhow = "1.0.95"
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.44.2", features = ["full"] }
sha2 = "0.10"
ed25519-dalek = "1.0"

# Additional dependencies for wrapper functionality
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

[lib]
name = "confidential_transfer_wrapper"
path = "src/lib.rs"

[dev-dependencies]
# Testing dependencies
tokio-test = "0.4"

[features]
default = []
devnet = []
mainnet-beta = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0